<resources>
    <string name="app_name">Video Conference For Meeting</string>
    <string name="app_name1">Video Conference For\nMeeting</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title1">Video Conferencing</string>
    <string name="titleintro1">Users can do video conferencing\nwith strangers by just sharing a link\nto join the conference call</string>
    <string name="title2">Audio calling</string>
    <string name="titleintro2">Users can do video and Audio call\nwith strangers by just sharing a link\nto join the call</string>
    <string name="profileInfo">Set your profile picture</string>
    <string name="or">OR</string>
    <string name="chooseData">Choose from device</string>
    <string name="personal_info">User Details</string>
    <string name="enter_name">Enter full name</string>
    <string name="set_username">Set Username</string>
    <string name="enter_age">Enter your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_gender">Select Your Gender</string>
    <string name="get_started">Get started</string>
    <string name="startconversation">Start conversation</string>
    <string name="startTxt">You can now connect on video call with strangers. </string>
    <string name="startaudioTxt">You can now connect on Audio call with strangers. </string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="save_changes">Save changes</string>
    <string name="discard">Discard changes</string>
    <string name="videocall">Video call</string>
    <string name="draweropen">Open</string>
    <string name="drawerclose">Close</string>
    <string name="header">Live Video Call - Meet\nStrangers</string>
    <string name="setting">Settings</string>
    <string name="coins">Coins</string>
    <string name="pro">Go Pro</string>
    <string name="share">Share App</string>
    <string name="moreapp">More Apps</string>
    <string name="privacy">Privacy Policy</string>
    <string name="tc"><![CDATA[T&C]]></string>
    <string name="ok">OK</string>
    <string name="coin_txt">Coins feature will be shown\nin updated version.</string>
    <string name="allowNoti">Allow Notification</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="donot">Do not disturb</string>
    <string name="dnd">DND</string>
    <string name="notification">Notification</string>
    <string name="advice_1">You need to dress for a video call as you would for an in-person meeting – or as close as possible. We may be working at home, but first impressions still matter. What you wear is nearly as important as what you say. As you are at home, it may be ok to take it down a notch, but not too far. More cashmere sweater than varsity sweatshirt. If you are in any doubt, always dress up, never down. Know that if you are talking with the CEO of a bank, and they expect a tie at all times, you will still need to wear a tie! Dress appropriately professional for the type of video call you are on.</string>
    <string name="advice_2">In an ideal world, the best room in your house to conduct a video call will also have exceptional lighting. Failing that, cheat. Get two lamps and position them on either side of your desk. That way, your face will be illuminated from both sides, and you will avoid unnatural shadows. Video quality is not always the best, so every trick will help you make a good impression.</string>
    <string name="advice_3">Position your webcam at eye level or higher. This way, you will look directly into the camera, not down, and look more natural. If this means you need to stack your laptop or screen on some books, do it. Just make sure it is not balanced precariously. You would not want it to fall over mid-video call. Make sure to look at the camera as much as possible or at the screen close to where the camera is. It will appear as direct eye contact. Avoid looking at yourself in the small frame of the corner of your screen.</string>
    <string name="advice_4">While we do not have much control over audio quality in a video call, you will sound better in a quiet room. Keep in mind that headphones can help you cut ambient noise and ensure you hear what is being said. Remember that if you can not hear the discussion, you will likely answer incorrectly when called on. Make sure your headphone mic is working correctly too. You may need to try a couple of headphones to find the one that has the clearest sound.</string>
    <string name="advice_5">Look at the background that will be in your video interviews. Is it a direct eyeline to your hamster cage or your bathroom? Both of those are distracting in different ways and will look unprofessional. Avoid that by making sure your background is a plain wall or a more professional looking space. Do not have that option available? If you are on a Zoom call, you can set up a virtual background to display an image as your background during the call. Shutterstock also has several free virtual backgrounds you can download and use.</string>
    <string name="advice_6">Once you have your set up in place, do a trial run with a friend or family member. Make sure your webcam, microphone, and headphones are working correctly. Make any adjustments you need to in your trial call so you are ready to go when your meeting starts. Make sure you have a good internet connection. If your internet is likely to cut out, make sure no one else in the house is downloading all 16 seasons of Greys Anatomy at the same time as your video call. Do not let your internet connection let you down your preparations. As a courtesy to others, know how to mute your microphone. Unmute yourself quickly when you need to speak and put mute back on afterwards. This will ensure no random outside notices make their way onto your video call.</string>
    <string name="advice_7">Even though people will only be seeing the top half of your body, you still need to be aware of your body language. Sit up straight in your chair with your feet on the ground. Keep the fidgeting down to a minimum. Know what you look like before you get on the video call – do not check your teeth once you are connected. Do not forget that you are on camera. Part of looking good means acting as you would in person. Pay close attention to your video call settings and the expression on your face. We can all still see you!</string>
    <string name="advice_8">As with regular meetings, try to clear the room you are in of everything that will distract you. Turn off the radio and TV. Close the door so family/roommates, children or pets do not interrupt you mid-call. But if they do, roll with it as best you can. This is an unusual time, and we are often working in less than ideal home office situations. It may put a smile on a coworkers face to see your cat appear on-screen for a while. If your child needs to know, “Why are we having spaghetti for the third night in a row?” politely excuse yourself out loud, hit mute, and try to come back as quick as possible. Just remember you are still on camera, and the video call is still going.</string>
    <string name="title_1">Dress appropriately</string>
    <string name="title_2">Fill your Face with Light</string>
    <string name="title_3">Raise your Camera</string>
    <string name="title_4">Find a quiet Place</string>
    <string name="title_5">Choose a neutral Background</string>
    <string name="title_6">Check your tech</string>
    <string name="title_7">Body Language</string>
    <string name="title_8">Keep clear of Distractions</string>
    <string name="room1">Room 1(Random)</string>
    <string name="online">Online : 0</string>
    <string name="room2">Room 2(Random)</string>
    <string name="room3">Room 3(only boys)</string>
    <string name="room4">Room 4(only girls)</string>
    <string name="audiocall">Audio call</string>
    <string name="audioTxt">Connect on audio call with strangers</string>
    <string name="aroom1">Room1</string>
    <string name="random">Random</string>
    <string name="aroom2">Room2</string>
    <string name="aroom3">Room3</string>
    <string name="aroom4">Room4</string>
    <string name="onlyboys">Only Boys</string>
    <string name="onlygirls">Only Girls</string>
    <string name="proTxt">Premium feature will be shown\nin updated version.</string>
    <string name="nointernet">Turn on your Internet!</string>
    <string name="special_case">By pressing the Accept button, I declare I have read and accepted the following condition of use:</string>
    <string name="info1">Dress\nAppropriately</string>
    <string name="info2">Fill your Face\nwith Light</string>
    <string name="info3">Raise your\nCamera</string>
    <string name="info4">Find a quiet\nPlace</string>
    <string name="info5">Choose a neutral\nBackground</string>
    <string name="info6">Check your\Tech</string>
    <string name="info7">Body\nLanguage</string>
    <string name="info8">Keep clear of\nDistractions</string>
    <string name="confirm">Confirm</string>
    <string name="letstart">Let’s Get Started!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="term_con"><![CDATA[Terms & Conditions]]></string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="lestconnect">Let’s Connect !</string>
    <string name="joi_meeting">Join meeting</string>
    <string name="videocon">Video conference</string>
    <string name="sharecode">Share</string>

</resources>