<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mRlHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_nav_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mProfilePic"
                    android:layout_width="116dp"
                    android:layout_height="116dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/demo_img"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="4dp" />

                <TextView
                    android:id="@+id/mTxtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/header"
                    android:textAppearance="@style/TextAppearance.MyApp.Body1"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <TextView
                android:id="@+id/mTxtProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_profile"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/edit_profile"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/navTxt" />

            <TextView
                android:id="@+id/mTxtPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_privacy"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/term_con"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/navTxt" />

            <TextView
                android:id="@+id/mTxtRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_rate"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/rate_us"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/navTxt" />

            <TextView
                android:id="@+id/mTxtShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_share"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/share"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/navTxt" />

            <TextView
                android:id="@+id/mTxtLogout"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_logout"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/navTxt" />

            <TextView
                android:id="@+id/mTxtSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_setting"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/setting"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mTxtCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_coins"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/coins"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mTxtPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_pro"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/pro"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mTxtMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_more"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/moreapp"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/black"
                android:visibility="gone" />


            <TextView
                android:id="@+id/mTxtTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:drawableStart="@drawable/nav_tc"
                android:drawablePadding="@dimen/_15dp"
                android:gravity="center_vertical"
                android:onClick="mOnNavigationClick"
                android:text="@string/tc"
                android:textAppearance="@style/TextAppearance.MyApp.Body2"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/mIvNavBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="mOnNavigationClick"
            android:src="@drawable/ic_nav_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </LinearLayout>
</RelativeLayout>