<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sign_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/native_ads"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/demo_img"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/profileInfo"
            android:textAppearance="@style/TextAppearance.MyApp.Subtitle2"
            android:textColor="@color/colorWhite05" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecylerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/or"
            android:textAppearance="@style/TextAppearance.MyApp.Button"
            android:textColor="@color/greyClr" />

        <TextView
            android:id="@+id/mTxtChoosePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/chooseData"
            android:textAppearance="@style/TextAppearance.MyApp.Subtitle2"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/mTxtNext"
            android:layout_width="240dp"
            android:layout_height="@dimen/_44dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/bg_gradiant_stroke"
            android:paddingBottom="@dimen/_2dp"
            android:backgroundTint="@color/colorOnPrimary"
            android:gravity="center"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.MyApp.Body1"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="@dimen/_4dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />
</RelativeLayout>