<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/ic_intro_btm"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mIVDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:src="@drawable/ic_dot2" />

        <TextView
            android:id="@+id/mTxtIntro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/title2"
            android:textAppearance="@style/TextAppearance.MyApp.IntroTxt"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/mTxtIntro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/titleintro2"
            android:textAppearance="@style/TextAppearance.MyApp.Body2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/mIvNext"
            android:layout_width="240dp"
            android:layout_height="@dimen/_44dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_gradiant_stroke"
            android:gravity="center"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.MyApp.Body1"
            android:textColor="@color/colorOnPrimary" />

    </LinearLayout>

</LinearLayout>